Fix footer layout bug on short pages

--- a/assets/css/layout.less
+++ b/assets/css/layout.less
@@ -52,6 +52,7 @@ hr    { clear: both; }
     overflow: hidden;
     white-space: nowrap;
 }
+.clearboth { clear: both; }
 
 .indent-one { padding-left: 2rem; }
 .indent-two { padding-left: 4rem; }
